--- a/css/cursos.css
+++ b/css/cursos.css
@@ -34,20 +34,20 @@
     align-items: center;
 }
 
-.cursos_chamada {
+.cursos__chamada {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.chamada_titulo {
+.chamada__titulo {
     color: #e93d50;
     font-weight: 700;
     font-size: 1.2rem;
     margin-bottom: .3rem;
 }
 
-.chamada_titulo--destaque {
+.chamada__titulo--destaque {
     color: #fff;
 }
 
@@ -57,12 +57,12 @@
     margin: 1rem 0;
 }
 
-.chamada_cursos_matricula {
+.chamada__cursos__matricula {
     color: #fff;
     background-color: #e93d50;
 }
 
-.cursos_lista {
+.cursos__lista {
     font-size: .7rem;
     font-weight: 600;
     margin-top: 1rem;
@@ -74,6 +74,175 @@
     text-align: center;
 }
 
-.cursos_lista li{
+.cursos__lista li{
     border: 1px solid #4286f4;
+    border-radius: 8px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-size: 2rem 2rem;
+    background-position: top .6rem center;
+    padding-top: 2.5rem;
+    transition: .25s;
+}
+
+.cursos__lista li:hover {
+    transform: translate(0, .22rem);
+    background-color: rgba(66, 134, 244, 0.337);
+    transition: .25s;
+}
+
+.curso--tecladopiano {
+    background-image: url(../img/icone-teclado-piano.svg);
+}
+
+.curso--violaoguitarra {
+    background-image: url(../img/icones-violao-guitarra.svg);
+}
+
+.curso--baixo {
+    background-image: url(../img/icones-baixo.svg);
+}
+
+.curso--bateria{
+    background-image: url(../img/icones-bateria.svg);
+}
+
+.curso--percussao {
+    background-image: url(../img/icones-percussao.svg);
+}
+
+.curso--canto {
+    background-image: url(../img/icones-canto.svg);
+}
+
+.curso--audio {
+    background-image: url(../img/icones-audio.svg);
+}
+
+.curso--teoria {
+    background-image: url(../img/icones-teoria.svg);
+}
+
+.curso--sopro {
+    background-image: url(../img/icones-sopro.svg);
+}
+
+.curso--cordas {
+    background-image: url(../img/icone-cordas.svg);
+}
+
+.cursos__lista img{
+    width: 2rem;
+    height: 2rem;
+    margin-bottom: 5px;
+}
+
+@media(min-width:768px) {
+    .cursos {
+        padding: 6rem 5% 0;
+        background-image: url(../img//home-background.png);
+    }
+
+    .cursos__chamada {
+        width: 300px;
+        align-items: flex-start;
+        align-self: flex-start;
+        text-align: left;
+    }
+
+    .chamada__titulo {
+        font-size: 2rem;
+    }
+
+    .chamada__cursos__matricula {
+        display: none;
+    }
+
+    .cursos__lista {
+        grid-template-columns: repeat(5, 7rem);
+        grid-template-rows: 5.5rem 5.5rem 5.5rem;
+        gap: .8rem;
+    }
+
+    .cursos__lista li {
+        background-repeat: no-repeat;
+        background-size: 2rem 2rem;
+        background-position: top 1rem center;
+        padding-top: 2.5rem;
+    }
+
+    .cursos__lista .curso--destaque {
+        order: -1;
+        grid-area: 1/1/span 3/3;
+        padding-top: 5.5rem;
+        background-size: 6rem 6rem;
+        background-position: top 3.6rem center;
+    }
+}
+
+@media(min-width:1200px) {
+    .cursos {
+        padding: 7rem 10% 0;
+    }
+
+    .cursos__chamada {
+        width: 450px;
+    }
+
+    .chamada__titulo {
+        font-size: 2.5rem;
+    }
+
+    .cursos__lista {
+        grid-template-columns: repeat(6, 9.3rem);
+        grid-template-rows: 7.5rem 7.5rem;
+        margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
+    }
+
+    .cursos__lista li {
+        background-repeat: no-repeat;
+        background-size: 3rem 3rem;
+        background-position: top 1rem center;
+        padding-top: 2.5rem;
+    }
+
+    .cursos__lista .curso--destaque {
+        order: -1;
+        grid-area: 1/1/span 2/2;
+        padding-top: 6rem;
+        background-size: 6rem 6rem;
+        background-position: top 3.6rem center;
+    }
+
+    .cursos__lista p {
+        font-size: .9rem;
+    }
+
+    .curso--destaque2 .imagem-destaque2 {
+        width: 6rem;
+        height: 6rem;
+        margin-bottom: .8rem;
+    }
+}
+
+@media(min-width:1440px) {
+    .cursos__lista {
+        grid-template-columns: repeat(6, 11rem);
+    }
+}
+
+@media(min-width:1600px) {
+    .cursos__lista {
+        grid-template-columns: repeat(6, 13rem);
+    }
+
+    .cursos__lista img {
+        width: 3rem;
+        height: 3rem;
+        margin-bottom: 10px;
+    }
 }
