--- a/css/container.css
+++ b/css/container.css
@@ -5,7 +5,7 @@
 
 @media (min-width: 1066px){
     .container{
-        padding-left: calc((100%-960px) / 2);
+        padding-left: calc((100% - 960px) / 2);
         padding-right: calc((100% - 960px) / 2);
     }
 }
